--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Deploy to kind
       run: |
         # Pull image from Docker Hub on the server side
-        kubectl apply -f k8s/
+        kubectl apply -f k8s/ --exclude=kind-config.yaml
         kubectl rollout status deployment/todoapp-deployment --timeout=90s
     - name: Verify deployment
       run: |
