--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,4 @@ services:
       - "8000:8000"
     environment:
       - DEBUG=0
-      - DJANGO_SECRET_KEY=your-secret-key
+      - DJANGO_SECRET_KEY="your-secret"
