--- a/k8s/configmap.yml
+++ b/k8s/configmap.yml
@@ -5,7 +5,7 @@ metadata:
 data:
   DJANGO_SETTINGS_MODULE: "TodoApp.settings"
   DEBUG: "1"  # "1" for development
-  ALLOWED_HOSTS: "192.168.1.109,localhost"
+  ALLOWED_HOSTS: "*"
   DATABASE_ENGINE: "django.db.backends.sqlite3"
   DATABASE_NAME: "/data/db.sqlite3"
   STATIC_ROOT: "/app/staticfiles"
