--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -1,4 +1,4 @@
-name: Django CI/CD with Docker Hub and kind
+name: Django CI/CD with Docker and Kind
 
 on:
   push:
@@ -9,67 +9,57 @@ env:
   KUBECONFIG: ${{ github.workspace }}/kubeconfig
 
 jobs:
-  test:
+  ci-cd:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - name: 🔄 Checkout Code
+      uses: actions/checkout@v3
+
+    - name: 🐍 Set Up Python
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-    - run: |
+
+    - name: 📦 Install Dependencies & Run Tests
+      run: |
         pip install -r requirements.txt
         python manage.py test
 
-  build-push:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Login to Docker Hub
+    - name: 🔐 Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_HUB_USERNAME }}
         password: ${{ secrets.DOCKER_HUB_TOKEN }}
-    - name: Build and push
+
+    - name: 🐳 Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
         push: true
         tags: ${{ env.DOCKER_IMAGE }}:latest
 
-  deploy-to-kind:
-    needs: build-push
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up kind
+    - name: 🧱 Set Up Kind Cluster
       uses: helm/kind-action@v1.7.0
       with:
-        config: kind-config.yaml
-    - name: Install kubectl
+        config: kind-config.yaml  # optional, omit if not using custom config
+
+    - name: ⚙️ Install kubectl
       uses: azure/setup-kubectl@v3
-    - name: Deploy to kind
+
+    - name: 🚀 Deploy to Kubernetes
       run: |
-        # Pull image from Docker Hub on the server side
-        kubectl apply -f k8s/configmap.yml
-        kubectl apply -f k8s/secret.yml
+        kubectl apply -f k8s/configmap.yml || true
         kubectl apply -f k8s/deployment.yml
         kubectl apply -f k8s/service.yml
         kubectl rollout status deployment/todoapp-deployment --timeout=90s
-    - name: Verify deployment
+
+    - name: 🔍 Verify Application Is Running
       run: |
-          kubectl get pods
-          kubectl get svc
-          
-          # Wait a few seconds to ensure pod is up
-          sleep 10
-          
-          # Port-forward and test the service
-          kubectl port-forward svc/todoapp-service 8000:8000 &
-          PORT_FORWARD_PID=$!
-          sleep 5  # wait for port-forward to establish
-          
-          # Test the app
-          curl -f http://localhost:8000 || (echo "App not reachable" && exit 1)
-          
-          # Clean up background port-forward
-          kill $PORT_FORWARD_PID
+        echo "⏳ Waiting for service to be ready..."
+        sleep 10
+
+        NODE_PORT=$(kubectl get service todoapp-service -o=jsonpath='{.spec.ports[0].nodePort}')
+        KIND_NODE=$(docker ps --filter "name=control-plane" --format "{{.Names}}")
+        KIND_IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $KIND_NODE)
+
+        echo "📡 Testing access to: http://$KIND_IP:$NODE_PORT"
+        curl --fail http://$KIND_IP:$NODE_PORT || (echo "❌ App not reachable!" && exit 1)
