--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   ci-cd:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: 🔄 Checkout Code
         uses: actions/checkout@v3
